2007-04-23  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/CleanStep.cs:
		Clean some special cases of MemberRef.

2007-03-19  Jb Evain  <jbevain@gmail.com>

	* Fix a bug when an assembly references two
	versions of an assembly with the same name.
	* do some refactorings

2007-03-16  Jb Evain  <jbevain@gmail.com>

	* rename linker.exe to monolinker.exe

2006-11-08  Jb Evain  <jbevain@gmail.com>

	* Mono.Linker/AssemblyMarker.cs:
		Fix a bug in method resolution.
	* Mono.Linker/Driver.cs:
		Fix a bug in assembly action processing.

2006-11-02  Jb Evain  <jbevain@gmail.com>

	* check-in patches adapted from contributions by:
		Alex Prudkiy <prudkiy@mail.ru>

2006-08-21  Jb Evain  <jbevain@gmail.com>

	* mark types used within the runtime

2006-08-20  Jb Evain  <jbevain@gmail.com>

	* mark the custom attributes from the assemblies, modules and
		generic parameters

	* mark the methods used by an event

	* mark the custom attributes on the properties and the events
		which are used.

	* preserve the fields of the value types

	* clean also nested types in a proper way.

	* clean events as well

2006-08-17  Jb Evain  <jbevain@gmail.com>

	* provide a Makefile

2006-08-16  Jb Evain  <jbevain@gmail.com>

	* work on generics assemblies linking

	* use the resolver from Cecil.

	* when marking a type, also mark its virtual methods

2006-08-15  Jb Evain  <jbevain@gmail.com>

	* clean properties

	* mark interfaces as well

	* work in progress + unit tests.

2006-07-27  Jb Evain  <jbevain@gmail.com>

	* begin work on the sweep step.

2006-07-20  Jb Evain  <jbevain@gmail.com>

	* very first commit.
	  draft implementation of the mark phase of the linker.