@@ -2,7 +2,7 @@
 MCS = mcs
 KEY_FILE = ../../mcs/class/mono.snk
 MONO.CECIL.DLL = Mono.Cecil.dll
-MCS_FLAGS = -keyfile:$(KEY_FILE) -r:$(MONO.CECIL.DLL) -resource:Descriptors/corlib.xml,Mono.Linker.Descriptors.corlib.xml
+MCS_FLAGS = -keyfile:$(KEY_FILE) -r:$(MONO.CECIL.DLL) -resource:Descriptors/corlib.xml -resource:Descriptors/system.xml -resource:Descriptors/system.web.xml
 LINKER = monolinker.exe
 
 all:
